--- a/examples/report.erb
+++ b/examples/report.erb
@@ -1,4 +1,4 @@
-Order number <%= order[:number] %>
+<%= big "Order number #{order[:number]}" %>
 
 <%= item "First item" %>
 <%= item "Second item" %>
